--- a/DrumKit-Jquery/DrumKit.html
+++ b/DrumKit-Jquery/DrumKit.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="DrumKit.css">
     <script src="Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+      // When the DOM is fully loaded the function   wireEvents() will be called.
       $(document).ready(function() {
         wireEvents();
       });
